<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".TaskActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="247dp"
        android:layout_height="158dp"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/sabrina_italic"
        android:text="@string/textGresya"
        android:textColor="@color/white"
        android:textSize="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonExplore"
        android:layout_width="150dp"
        android:layout_height="196dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="21dp"
        android:text="@string/buttonExploreGresya"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#2D628F"
        app:layout_constraintBottom_toTopOf="@+id/buttonRestaurant"
        app:layout_constraintEnd_toEndOf="@+id/buttonRestaurant"
        app:layout_constraintEnd_toStartOf="@+id/buttonGallery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonGallery"
        android:layout_width="150dp"
        android:layout_height="196dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="243dp"
        android:text="@string/buttonGallery"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#2D628F"
        app:layout_constraintBottom_toTopOf="@+id/buttonTimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonExplore"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonRestaurant"
        android:layout_width="150dp"
        android:layout_height="196dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="122dp"
        android:text="@string/buttonRestaurant"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="#2D628F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonNews"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonExplore" />

    <Button
        android:id="@+id/buttonNews"
        android:layout_width="150dp"
        android:layout_height="196dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="19dp"
        android:text="@string/buttonNews"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#2D628F"
        app:layout_constraintBottom_toTopOf="@+id/buttonTimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonRestaurant"
        app:layout_constraintTop_toBottomOf="@+id/buttonExplore"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/buttonTimer"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="36dp"
        android:text="@string/buttonTimer"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#2D628F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGallery"
        app:layout_constraintVertical_bias="0.953" />


</androidx.constraintlayout.widget.ConstraintLayout>